[gd_scene load_steps=72 format=4 uid="uid://de8l23ii7y0qa"]

[ext_resource type="Script" uid="uid://phj8hae15q4q" path="res://cutscenes/closing_scene_1.gd" id="1_lvvt2"]
[ext_resource type="Texture2D" uid="uid://dn880g012irhh" path="res://assets/Cutscenes/dark_grass.png" id="2_lvvt2"]
[ext_resource type="Texture2D" uid="uid://b6qmjrld1gadb" path="res://assets/Cutscenes/gravestones.png" id="3_7yecr"]
[ext_resource type="Texture2D" uid="uid://ca0cptirgc1en" path="res://assets/Cutscenes/dark_plants.png" id="3_bwcfi"]
[ext_resource type="Texture2D" uid="uid://csbnsj85o6jbh" path="res://assets/Exterior/plant 2.png" id="4_7ie0s"]
[ext_resource type="Texture2D" uid="uid://cgjvrpn4l5xm6" path="res://assets/Characters/npc5 spritesheet.png" id="7_7nx8p"]
[ext_resource type="Texture2D" uid="uid://b8vbeuhdlxurv" path="res://assets/UI/shop_menu_button.png" id="8_tlk25"]
[ext_resource type="Texture2D" uid="uid://c3unpobjmixoy" path="res://assets/Cutscenes/wisp_sprite.png" id="9_gqr42"]
[ext_resource type="FontFile" uid="uid://51sh8vau5yw2" path="res://assets/UI/6px-normal.ttf" id="9_oepfs"]
[ext_resource type="Texture2D" uid="uid://ubx5wb6xd4lo" path="res://assets/Cutscenes/wisp_escape.png" id="10_lvvt2"]
[ext_resource type="Texture2D" uid="uid://dico6mp50cpkh" path="res://assets/UI/forward.png" id="10_vk8d6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xmtfc"]
texture = ExtResource("2_lvvt2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_kwc5i"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_xmtfc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y7dwv"]
texture = ExtResource("3_bwcfi")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(5, 5)
0:0/0 = 0
5:0/size_in_atlas = Vector2i(4, 5)
5:0/0 = 0
9:0/size_in_atlas = Vector2i(3, 5)
9:0/0 = 0
1:6/0 = 0
2:6/0 = 0
3:5/size_in_atlas = Vector2i(2, 2)
3:5/0 = 0
5:5/size_in_atlas = Vector2i(2, 2)
5:5/0 = 0
7:5/size_in_atlas = Vector2i(2, 2)
7:5/0 = 0
9:5/size_in_atlas = Vector2i(2, 2)
9:5/0 = 0

[sub_resource type="TileSet" id="TileSet_4hf80"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_y7dwv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hs2a8"]
texture = ExtResource("3_7yecr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_gqr42"]
sources/0 = SubResource("TileSetAtlasSource_hs2a8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ap74f"]
texture = ExtResource("4_7ie0s")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(5, 5)
0:0/0 = 0
5:0/size_in_atlas = Vector2i(4, 5)
5:0/0 = 0
9:0/size_in_atlas = Vector2i(3, 5)
9:0/0 = 0
1:6/0 = 0
3:6/0 = 0
0:12/0 = 0
0:13/0 = 0
0:14/0 = 0
0:15/0 = 0
1:12/0 = 0
1:13/0 = 0
1:14/0 = 0
1:15/0 = 0
2:12/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
3:12/0 = 0
3:13/0 = 0
3:14/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_07846"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_ap74f")

[sub_resource type="Gradient" id="Gradient_wu84c"]
offsets = PackedFloat32Array(0.136646, 0.565217)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xmtfc"]
gradient = SubResource("Gradient_wu84c")
fill = 1
fill_from = Vector2(0.511111, 0.502222)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u8vuu"]
load_path = "res://.godot/imported/character1 spritesheet.png-1533b5fcad54565574ab925f8a739bee.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbmy7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}],
"loop": true,
"name": &"walk_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}],
"loop": true,
"name": &"walk_up",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_imtac"]
radius = 6.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kwc5i"]
atlas = ExtResource("7_7nx8p")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7dwv"]
atlas = ExtResource("7_7nx8p")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hf80"]
atlas = ExtResource("7_7nx8p")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap74f"]
atlas = ExtResource("7_7nx8p")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_07846"]
atlas = ExtResource("7_7nx8p")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsmwq"]
atlas = ExtResource("7_7nx8p")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76yb0"]
atlas = ExtResource("7_7nx8p")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k3d6"]
atlas = ExtResource("7_7nx8p")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbxs1"]
atlas = ExtResource("7_7nx8p")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65p8p"]
atlas = ExtResource("7_7nx8p")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j12fc"]
atlas = ExtResource("7_7nx8p")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca200"]
atlas = ExtResource("7_7nx8p")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mrrx"]
atlas = ExtResource("7_7nx8p")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo73b"]
atlas = ExtResource("7_7nx8p")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n3s8"]
atlas = ExtResource("7_7nx8p")
region = Rect2(32, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dj2dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7dwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hf80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7dwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwc5i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap74f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07846")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsmwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07846")
}],
"loop": true,
"name": &"walk_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76yb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k3d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbxs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k3d6")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65p8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j12fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca200")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j12fc")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mrrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo73b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n3s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo73b")
}],
"loop": true,
"name": &"walk_up",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_07846"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ap74f"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qsmwq"]
_data = {
&"RESET": SubResource("Animation_07846"),
&"fade": SubResource("Animation_ap74f")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bwcfi"]
atlas = ExtResource("9_gqr42")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ie0s"]
atlas = ExtResource("9_gqr42")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtjvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwcfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ie0s")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_imvwe"]
atlas = ExtResource("10_lvvt2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nx8p"]
atlas = ExtResource("10_lvvt2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlk25"]
atlas = ExtResource("10_lvvt2")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oepfs"]
atlas = ExtResource("10_lvvt2")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk8d6"]
atlas = ExtResource("10_lvvt2")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk4op"]
atlas = ExtResource("10_lvvt2")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjwmr"]
atlas = ExtResource("10_lvvt2")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qooaa"]
atlas = ExtResource("10_lvvt2")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccw5t"]
atlas = ExtResource("10_lvvt2")
region = Rect2(128, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k05v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imvwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imvwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nx8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlk25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oepfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk8d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk4op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjwmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qooaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccw5t")
}],
"loop": false,
"name": &"release_wisps",
"speed": 5.0
}]

[node name="closing_scene1" type="Node2D"]
script = ExtResource("1_lvvt2")

[node name="grass" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAADAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAACAAAAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAAAAAAAAAYAAAABAAAAAAABAAAAAAAAAAAAAAABAAEAAAAGAAMAAAABAAIAAAAGAAAAAAABAAMAAAAAAAIAAAABAAQAAAACAAEAAAABAAUAAAAAAAEAAAABAAYAAAABAAIAAAACAAAAAAAFAAIAAAACAAEAAAAFAAEAAAACAAIAAAABAAAAAAACAAMAAAACAAAAAAACAAQAAAABAAIAAAACAAUAAAAAAAAAAAACAAYAAAAGAAIAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAABAAMAAAADAAMAAAAAAAAAAAADAAQAAAAEAAMAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAAAAAAAAAEAAAAEAAEAAAAHAAIAAAAEAAIAAAAEAAEAAAAEAAMAAAAGAAMAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAAAAAAEAAEAAAAFAAEAAAAAAAMAAAAFAAIAAAACAAIAAAAFAAMAAAAGAAIAAAAFAAQAAAAHAAIAAAAFAAUAAAAHAAMAAAAFAAYAAAADAAIAAAAGAAAAAAAAAAAAAAAGAAEAAAAGAAIAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAGAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAFAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAADAAIAAAAHAAIAAAAAAAAAAAAHAAMAAAAGAAEAAAAHAAQAAAAGAAEAAAAHAAUAAAAHAAAAAAAHAAYAAAAAAAAAAAAIAAAAAAACAAAAAAAIAAEAAAAEAAMAAAAIAAIAAAACAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAABAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAGAAIAAAAJAAAAAAAFAAEAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAFAAAAAAAJAAQAAAACAAMAAAAJAAUAAAAAAAMAAAAJAAYAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAEAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAACAAEAAAALAAIAAAACAAIAAAALAAMAAAADAAEAAAALAAQAAAAGAAIAAAALAAUAAAAGAAAAAAALAAYAAAAAAAAAAAAMAAAAAAACAAEAAAAMAAEAAAADAAMAAAAMAAIAAAAGAAIAAAAMAAMAAAACAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAAAAAAMAAYAAAAGAAIAAAANAAAAAAAAAAAAAAANAAEAAAAHAAEAAAANAAIAAAAAAAAAAAANAAMAAAACAAIAAAANAAQAAAADAAIAAAANAAUAAAACAAEAAAANAAYAAAADAAAAAAAOAAAAAAAAAAIAAAAOAAEAAAAGAAEAAAAOAAIAAAAAAAAAAAAOAAMAAAAFAAMAAAAOAAQAAAACAAMAAAAOAAUAAAAAAAAAAAAOAAYAAAAFAAMAAAAPAAAAAAAAAAAAAAAPAAEAAAABAAEAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAGAAMAAAAPAAYAAAAEAAMAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAABAAAAAAAQAAQAAAAFAAMAAAAQAAUAAAABAAAAAAAQAAYAAAAAAAAAAAARAAAAAAAHAAMAAAARAAEAAAAHAAAAAAARAAIAAAAAAAAAAAARAAMAAAACAAMAAAARAAQAAAAAAAAAAAARAAUAAAABAAIAAAARAAYAAAADAAIAAAASAAAAAAAEAAIAAAASAAEAAAAFAAEAAAASAAIAAAAGAAMAAAASAAMAAAACAAMAAAASAAQAAAAFAAIAAAASAAUAAAADAAEAAAASAAYAAAADAAAAAAATAAAAAAAGAAMAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAIAAAATAAQAAAAAAAAAAAATAAUAAAAGAAIAAAATAAYAAAAAAAAAAAAUAAAAAAAEAAEAAAAUAAEAAAAHAAMAAAAUAAIAAAAEAAIAAAAUAAMAAAAGAAEAAAAUAAQAAAABAAIAAAAUAAUAAAAAAAAAAAAUAAYAAAAEAAEAAAAVAAAAAAABAAAAAAAVAAEAAAAGAAAAAAAVAAIAAAADAAMAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAACAAAAAAAVAAYAAAAAAAAAAAAWAAAAAAADAAIAAAAWAAEAAAADAAEAAAAWAAIAAAAAAAAAAAAWAAMAAAAHAAIAAAAWAAQAAAAFAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAGAAIAAAA=")
tile_set = SubResource("TileSet_kwc5i")

[node name="trees" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAATAAAAAAAJAAAAAAAPAAAAAAAJAAAAAAANAAAAAAAJAAAAAAAKAAAAAAAFAAAAAAAEAAAAAAAFAAAAAAA=")
tile_set = SubResource("TileSet_4hf80")

[node name="graves" type="TileMapLayer" parent="."]
position = Vector2(8, 0)
tile_map_data = PackedByteArray("AAAWAAYAAAAAAAAAAAATAAcAAAABAAAAAAAZAAcAAAACAAAAAAA=")
tile_set = SubResource("TileSet_gqr42")

[node name="foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAARAAEAAAAAAAAAAAAMAAAAAAAFAAAAAAAWAAAAAAAFAAAAAAABAAIAAAADAAYAAAAOAAIAAAADAAYAAAATAAIAAAADAAYAAAAVAAIAAAADAAYAAAAKAAIAAAADAAYAAAADAAIAAAABAAYAAAALAAMAAAABAAwAAAAJAAQAAAAAAAwAAAAPAAQAAAAAAAwAAAA=")
tile_set = SubResource("TileSet_07846")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(107, 33)

[node name="PointLight2D" type="PointLight2D" parent="player"]
visible = false
position = Vector2(204, 135)
scale = Vector2(1.39062, 1.32813)
color = Color(0.475829, 0.346756, 0, 1)
texture = SubResource("GradientTexture2D_xmtfc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
clip_children = 2
position = Vector2(204, 132)
sprite_frames = SubResource("SpriteFrames_cbmy7")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(204, 135)
shape = SubResource("CapsuleShape2D_imtac")

[node name="elder" type="CharacterBody2D" parent="."]
position = Vector2(24, 140)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="elder"]
position = Vector2(408, 24)
sprite_frames = SubResource("SpriteFrames_dj2dm")
animation = &"idle"
frame_progress = 0.852048

[node name="CollisionShape2D" type="CollisionShape2D" parent="elder"]
position = Vector2(408, 27)
shape = SubResource("CapsuleShape2D_imtac")

[node name="Efffects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qsmwq")
}

[node name="dialogue_box" type="NinePatchRect" parent="."]
visible = false
z_index = 3
offset_left = 302.0
offset_top = 155.0
offset_right = 459.0
offset_bottom = 204.0
texture = ExtResource("8_tlk25")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="dialogue_box"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 154.0
offset_bottom = 45.0
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("9_oepfs")
theme_override_font_sizes/font_size = 8
text = "Who goes there? ...Ah—wait. It's you."
autowrap_mode = 3

[node name="TextureButton" type="TextureButton" parent="dialogue_box"]
layout_mode = 0
offset_left = 144.0
offset_top = 35.0
offset_right = 155.0
offset_bottom = 46.0
texture_normal = ExtResource("10_vk8d6")

[node name="wisps" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="wisps"]
position = Vector2(367, 72)
sprite_frames = SubResource("SpriteFrames_rtjvq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.126301

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="wisps"]
position = Vector2(320, 93)
sprite_frames = SubResource("SpriteFrames_rtjvq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.331499

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="wisps"]
position = Vector2(417, 92)
sprite_frames = SubResource("SpriteFrames_rtjvq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.5048

[node name="wisps_jar" type="AnimatedSprite2D" parent="."]
position = Vector2(368, 142)
sprite_frames = SubResource("SpriteFrames_k05v0")
animation = &"release_wisps"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(368, 128)
rotation = 3.14159
scale = Vector2(622.715, 2.8432)
zoom = Vector2(4, 4)

[node name="effects_timer" type="Timer" parent="."]

[node name="jar_timer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="pause_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -72.0
offset_right = 800.0
offset_bottom = 240.0
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="dialogue_box/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="effects_timer" to="." method="_on_effects_timer_timeout"]
[connection signal="timeout" from="jar_timer" to="." method="_on_jar_timer_timeout"]
[connection signal="timeout" from="pause_timer" to="." method="_on_pause_timer_timeout"]
